Bug 162174 - Crash when opening Bullets and Numbering dialog a second time
Summary: Crash when opening Bullets and Numbering dialog a second time
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Julien Nabet
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 162168 (view as bug list)
Depends on:
Blocks: Bullet-Number-Outline-Lists Crash
  Show dependency treegraph
 
Reported: 2024-07-24 13:01 UTC by Stéphane Guillou (stragu)
Modified: 2024-07-26 04:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt (6.51 KB, text/plain)
2024-07-25 08:26 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2024-07-24 13:01:19 UTC
Steps:
1. With new profile, open Writer
2. Format > Bullets and Numbering > Cancel
3. Format > Bullets and Numbering

Result: crash.
After these steps
- opening the dialog always crashes, even in a new session.
- toggling Unordered List from the toolbar crashes too (see bug 162168)

Reproduced in recent trunk build:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 57f46e0244bdc1165ebbc5e09e4069cc075ff7ae
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Not in 24.8.0.1.
Comment 1 Stéphane Guillou (stragu) 2024-07-24 13:01:45 UTC
*** Bug 162168 has been marked as a duplicate of this bug. ***
Comment 2 Julien Nabet 2024-07-25 08:26:23 UTC
Created attachment 195491 [details]
bt

On pc Debian x86-64 with master sources updated today, I got an assertion.
Comment 3 Julien Nabet 2024-07-25 08:35:22 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/171003
Comment 4 Commit Notification 2024-07-25 10:14:41 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e219fc0ede27854a82681fde8c1fa3d4f60b2068

tdf#162174: fix crash when opening Bullets and Numbering dialog a second time

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2024-07-25 12:05:52 UTC
Regression introduced by:

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2024-07-11 10:15:31 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	2024-07-11 16:36:40 +0200
commit 8f9b8b6d5ddcdb4e0422f55d67f38063d53b8c21 (patch)
tree 507248d83a2a4ab5570df31f29500091ab75e21e
parent 40e3a66db506b5b4f123325fcb1844764367565b (diff)
Don't save bullet changes when dialog was cancelled
Comment 6 Stéphane Guillou (stragu) 2024-07-25 13:58:56 UTC
Also crashes on Windows 11.
Comment 7 Stéphane Guillou (stragu) 2024-07-26 04:18:54 UTC
Thanks Julien! Verified with own build:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dc9486f2443fa52588b625c0a2a288bff56a7a45
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded