tdf#162174: fix crash when opening Bullets and Numbering dialog a second time

It seems we must first retrieve the array of values from:
- officecfg::Office::Common::BulletsNumbering::DefaultBullets
- officecfg::Office::Common::BulletsNumbering::DefaultBulletsFonts
before retrieving the value by index.

Change-Id: I9cdf124f73c52f3027ae8e97a73e01e0efb73603
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171003
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>